--- a/tensorboard/plugins/convert/tf_convert/tf-convert.html
+++ b/tensorboard/plugins/convert/tf_convert/tf-convert.html
@@ -52,6 +52,13 @@ h2 {
 paper-button {
   text-transform: none;
 }
+
+tf-convert-scene {
+    display: flex;
+    width: 100%;
+    font-size: 20px;
+    height: 1000px;
+}
 </style>
 <div class="container">
   <div class="vertical">
