debug resize dom

--- a/tensorboard/plugins/debug_db/tf_debugdb/tf-debugdb-scene.html
+++ b/tensorboard/plugins/debug_db/tf_debugdb/tf-debugdb-scene.html
@@ -522,7 +522,7 @@ limitations under the License.
 #minimap {
   position: absolute;
   right: 20px;
-  bottom: 20px;
+  top: 20px;
 }
 </style>
 <div class="titleContainer">
