--- a/tensorboard/plugins/debug_db/tf_debugdb/tf-debugdb.html
+++ b/tensorboard/plugins/debug_db/tf_debugdb/tf-debugdb.html
@@ -97,7 +97,7 @@ paper-button.cancel-bt{
 .resizer {
   height: 8px;
   width: 100%;
-  cursor: pointer;
+  cursor: row-resize;
 }
 </style>
 <div class="vertical">
