hide tf-runs-selector

--- a/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
+++ b/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
@@ -108,6 +108,7 @@ TensorFlow run.
       <tf-runs-selector
       id="runs-selector"
       selected-runs="{{_selectedRuns}}"
+      style="display: none"
     ></tf-runs-selector>
     <form is="iron-form" id="form" method="post">
       <div class="flex-holder">Data Edit</div>
